--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
-  db:
+  db1:
     image: postgres:14.1
+    container_name: db1
     restart: always
     environment:
       POSTGRES_HOST_AUTH_METHOD: "trust"
@@ -10,5 +11,18 @@ services:
       POSTGRES_PASSWORD: lab_password
     ports:
       - '5432:5432'
+    volumes: 
+      - ./sample:/var/lib/postgresql/data
+  db2:
+    image: postgres:14.1
+    container_name: db2
+    restart: always
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: "trust"
+      POSTGRES_DB: lab
+      POSTGRES_USER: lab_user
+      POSTGRES_PASSWORD: lab_password
+    ports:
+      - '5433:5432'
     volumes: 
       - ./sample:/var/lib/postgresql/data
